ags (2.1.41)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsCellPattern get sequencer counter and set active led
	* improved AgsPatternBox get sequencer counter and set active led
	* improved ags_recall_find_type() and ags_recall_template_find_type() to use g_type_is_a()
	* improved CoreAudio output to use cache
	* removed calls to pango_fc_font_map_cache_clear()
	* fixed ags_pulse_audio_get_next_buffer() index excess
	* fixed AgsOscConnection and AgsOscClient missing variable on apple

ags (2.1.40)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed resample of AgsAudioSignal and AgsWave only as needed
	* fixed realloc buffer size of AgsAudioSignal and AgsWave only as needed

ags (2.1.39)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed typo in functional-system-tests.mk.am

ags (2.1.38)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* refactored ags_wave_find_point() to do bisect
	* added  unit-system-tests.mk.am

ags (2.1.37)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed remove message monitor on AgsMachine implementation finalize

ags (2.1.36)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added missing seekable interface to AgsCaptureWaveChannelRun
	* fixed initial seek in AgsAudiorec
	* fixed wrong format during resample in ags_audio_signal.c
	* fixed wrong format during resample in ags_wave.c
	* fixed desktop-id in gsequencer.appdata.xml

ags (2.1.35)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsMachine signals ::samplerate-changed, ::buffer-size-changed and ::format-changed
	* implemented AgsPad signals ::samplerate-changed, ::buffer-size-changed and ::format-changed
	* implemented AgsLine signals ::samplerate-changed, ::buffer-size-changed and ::format-changed
	* implemented AgsEffectBridge signals ::samplerate-changed, ::buffer-size-changed and ::format-changed