@@ -1,3 +1,9 @@
+ags (2.1.42)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed grow buffer size in ags_audio_signal_set_buffer_size()
+	* fixed grow buffer size in ags_wave_set_buffer_size()
+
 ags (2.1.41)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
